--- a/src/Blinky/Blinky.vcxproj
+++ b/src/Blinky/Blinky.vcxproj
@@ -141,10 +141,12 @@
   <ItemGroup>
     <ClCompile Include="SocketAddress.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="UDPSocket.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConnectionManager.h" />
     <ClInclude Include="SocketAddress.h" />
+    <ClInclude Include="UDPSocket.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
