--- a/src/Blinky/Blinky.vcxproj.filters
+++ b/src/Blinky/Blinky.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="UDPSocket.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Packet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
